--- a/css/index.css
+++ b/css/index.css
@@ -579,6 +579,101 @@ header{
     margin: 10px 0;
 }
 
+/* FOOTER */
+footer{
+    padding: 50px;
+    background-color: black;
+    color: white;
+}
+
+.footer__main{
+    width: 70%;
+    margin: 0 auto;
+    display: flex;
+    padding-bottom: 50px;
+}
+
+.footer__item{
+    width: 25%;
+    padding: 0 20px;
+}
+
+.footer__item h3{
+    font-size: 1.3rem;
+    color: #ff0383;
+    margin-bottom: 16px;
+}
+
+.footer__item p{
+    font-size: 0.8rem;
+    line-height: 28px;
+    padding-bottom: 1rem;
+}
+
+.footer__socials i{
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    margin-right: 10px;
+    border: 1px solid white;
+    transition: all .5s;
+}
+
+.footer__socials i:hover{
+    color: #ff0383;
+    border-color: #ff0383;
+}
+
+.footer__time{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px dotted white;
+}
+
+.footer__time p{
+    padding: 0;
+    margin: 10px 0;
+}
+
+.footer__item .footer__sub input{
+    margin-bottom: 1rem ;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.footer__item .footer__sub input:focus{
+    outline: none;
+}
+
+.footer__item .footer__sub button{
+    padding: 7px 16px;
+    margin-bottom: 24px;
+    color: black;
+    border-color: #ff0383;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+
+.footer__item .footer__sub button:hover{
+    border: black;
+}
+
+.footer__copyright{
+    text-align: center;
+    font-size: 0.8rem;
+}
+
+.footer__copyright span{
+    color: #ff0383;
+}
+
+
+
+
+
+
 
 
 
